Default kolla_namespace to openstack_release
Change-Id: I4b7df0d48ad23b2d6ce01d5a52797662205aeddc

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -33,7 +33,7 @@ kolla_debug: "false"
 kolla_install_type: "binary"
 kolla_logs_dir: "{{ kolla_tmpdir }}/logs"
 kolla_maintainer: "TripleO Project (http://tripleo.org)"
-kolla_namespace: "master"
+kolla_namespace: "{{ openstack_release }}"
 kolla_retries: 3
 kolla_skip_existing: "true"
 kolla_tag: "latest"
