Switch to tox-linters for zuulv3
We get tox-linters job for free from zuul-jobs, so when we move to
zuulv3 we can then remove ansible-lint entry.

Change-Id: I03c5b3b4711ea0daab3a43060d304ad71c53ac5b
Signed-off-by: Paul Belanger <pabelanger@redhat.com>

--- a/tox.ini
+++ b/tox.ini
@@ -9,6 +9,15 @@ install_command = pip install -U {opts} {packages}
 setenv = VIRTUAL_ENV={envdir}
 deps = -r{toxinidir}/test-requirements.txt
 
+[testenv:linters]
+whitelist_externals =
+    {[testenv:ansible-lint]whitelist_externals}
+commands =
+    {[testenv:ansible-lint]commands}
+setenv =
+    {[testenv:ansible-lint]setenv}
+
+# TODO(pabelanger): Replace this with linters entry point once we move to zuulv3
 [testenv:ansible-lint]
 whitelist_externals = bash
 commands =
