Add option to provide additional rpm repos for kolla build
This patch adds a role parameter: "extra_rpm_repos", this parameter
can be used to pass additional list of repos to be used during
kolla containers build.

Change-Id: I65168620e91fd7f5a771fa11cab53defb72bfc0a

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -22,6 +22,7 @@ kolla_git_version: "master"
 openstack_release: "master"
 trunk_repository: "https://trunk.rdoproject.org/centos7-{{ openstack_release }}/current-passed-ci/delorean.repo"
 trunk_deps_repository: "https://trunk.rdoproject.org/centos7-{{ openstack_release }}/delorean-deps.repo"
+extra_rpm_repos: []
 
 # kolla-build.conf
 # For more information, refer to Kolla documentation or:
