Add option to provide additional rpm repos for kolla build
This patch adds a role parameter: "extra_rpm_repos", this parameter
can be used to pass additional list of repos to be used during
kolla containers build.

Change-Id: I65168620e91fd7f5a771fa11cab53defb72bfc0a

--- a/tasks/repositories.yml
+++ b/tasks/repositories.yml
@@ -31,6 +31,11 @@
           - "{{ hashed_trunk_repository }}"
           - "{{ trunk_deps_repository }}"
 
+     - name: Add extra rpm repos if defined
+       set_fact:
+         kolla_rpm_setup_config: "{{ kolla_rpm_setup_config }} + {{ extra_rpm_repos }}"
+       when: extra_rpm_repos
+
     - name: Fetch repo file
       get_url:
         url: "{{ item }}"
