Remove the tripleo_default kolla profile
This change removes the tripleo_default kolla profile, and the tasks
which build it.

This unblocks us from deleting the file overcloud_containers.yaml[1]

This change assumes that no consumer of this role is using the
tripleo_default profile, and are all specifying kolla_rdo_images
always.

The TripleO default images can always be built with the
command "overcloud container image build", it might be necessary for
this role to switch over to calling "overcloud container image build"
too because it supports building with buildah, and its unclear when
kolla-build will add buildah support.

[1] https://review.openstack.org/#/c/603505/

Change-Id: Idd321fa66b7aa0e155842ddda4efc2a448c678b7

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -62,3 +62,4 @@ kolla_push: false
 # For example, 'nova' would build all parent and child containers related to
 # 'nova'.
 kolla_rdo_images:
+build_profile: tripleo_custom
