Provides ACL and Groups

--- a/project.config
+++ b/project.config
@@ -1,23 +1,20 @@
-[project]
-	description = 
 [access "refs/*"]
-  read = group rdo-infra/ansible-role-rdo-kolla-build-core
-  owner = group rdo-infra/ansible-role-rdo-kolla-build-ptl
+  owner = group rdo-infra-core
 [access "refs/heads/*"]
-	label-Code-Review = -2..+2 group rdo-infra/ansible-role-rdo-kolla-build-core
-	label-Code-Review = -2..+2 group rdo-infra/ansible-role-rdo-kolla-build-ptl
-	label-Verified = -2..+2 group rdo-infra/ansible-role-rdo-kolla-build-ptl
-	label-Workflow = -1..+1 group rdo-infra/ansible-role-rdo-kolla-build-core
-	label-Workflow = -1..+1 group rdo-infra/ansible-role-rdo-kolla-build-ptl
-	label-Workflow = -1..+0 group Registered Users
-	submit = group rdo-infra/ansible-role-rdo-kolla-build-ptl
-	read = group rdo-infra/ansible-role-rdo-kolla-build-core
+    label-Code-Review = -2..+2 group rdo-infra-core
+    label-Verified = -2..+2 group rdo-infra-core
+    label-Workflow = -1..+0 group Registered Users
+    label-Workflow = -1..+1 group rdo-infra-core
+    submit = group rdo-infra-core
+    read = group rdo-infra-core
     read = group Registered Users
 [access "refs/meta/config"]
-    read = group rdo-infra/ansible-role-rdo-kolla-build-core
+    read = group rdo-infra-core
     read = group Registered Users
 [receive]
-	requireChangeId = true
+    requireChangeId = true
 [submit]
-	mergeContent = false
-	action = fast forward only
+    mergeContent = false
+    action = rebase if necessary
+[project]
+        description = No description provided
